{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 40,
  "lineage": "87df11d2-916b-1f1a-d178-9326d6f3f09e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-032598fcc7e9d1c7a",
            "arn": "arn:aws:ec2:eu-west-2:162855553133:instance/i-0650f87fb5d2c7c2b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0650f87fb5d2c7c2b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awsinaction",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-066518b217a8c0f4c",
            "private_dns": "ip-172-31-20-222.eu-west-2.compute.internal",
            "private_ip": "172.31.20.222",
            "public_dns": "ec2-3-8-144-119.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.144.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00952af6f1e074901",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_docker"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7d4af107",
            "tags": {
              "Name": "docker-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f2c90cbae4013f8a"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_docker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-032598fcc7e9d1c7a",
            "arn": "arn:aws:ec2:eu-west-2:162855553133:instance/i-01934e2bb56e26d3f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01934e2bb56e26d3f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awsinaction",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08aacd049f2dc4dc5",
            "private_dns": "ip-172-31-24-111.eu-west-2.compute.internal",
            "private_ip": "172.31.24.111",
            "public_dns": "ec2-35-177-230-171.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.230.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-082e3d3cd8a1c5b33",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7d4af107",
            "tags": {
              "Name": "jenkins-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf596ae742e9508"
            ]
          },
          "dependencies": [
            "aws_ebs_volume.jenkins-volume",
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_docker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:162855553133:security-group/sg-0f2c90cbae4013f8a",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2c90cbae4013f8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from Docker",
                "from_port": 2375,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2375
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from Local machine",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_docker",
            "name_prefix": null,
            "owner_id": "162855553133",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "docker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f2876f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:162855553133:security-group/sg-0abf596ae742e9508",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0abf596ae742e9508",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from Docker",
                "from_port": 2375,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2375
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_tls",
            "name_prefix": null,
            "owner_id": "162855553133",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-security"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f2876f"
          }
        }
      ]
    }
  ]
}